# gitlab-review-claude-agent

./: .env.example  .gitignore  README.md  config.example.toml  install-skill.sh  pyproject.toml
.claude/skills/gitlab-review-loop/: SKILL.md
src/claude_reviewer/: __main__.py  claude_runner.py  cli.py  config.py  diff_filter.py  diff_parser.py  errors.py  gitlab_client.py  gitlab_poster.py  logging_utils.py  markers.py  metrics.py  orchestrator.py  prompt_builder.py  repo_manager.py  review_sink_mcp.py  state.py  types.py  validation.py
tests/: conftest.py
tests/fixtures/: config_valid.toml
tests/integration/: test_daemon_single_pass.py  test_orchestrator.py  test_repo_manager.py
tests/unit/: test_claude_runner.py  test_claude_runner_usage.py  test_config.py  test_diff_filter.py  test_diff_parser.py  test_gitlab_client.py  test_gitlab_poster.py  test_markers.py  test_metrics.py  test_prompt_builder.py  test_review_sink.py  test_state.py  test_types.py  test_validation.py
